<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GameOfLife</string>
    <string name="start_game_main">Game Start</string>
    <string name="start_game">Start</string>
    <string name="stop_game">Stop</string>
    <string name="clear_game">Clear</string>
    <string name="shapes">Shapes</string>
    <string name="speed">Speed</string>
    <string name="board_size">Board Size</string>
    <string name="about_game">About</string>
    <string name="main_header">Main Menu</string>
    <string name="game_header">Game of Life</string>
    <string name="action_settings">Settings</string>

</resources>
